fix scan widget on mobiles

--- a/lasagna/src/styles.scss
+++ b/lasagna/src/styles.scss
@@ -66,3 +66,8 @@ a {
     text-decoration: none;
   }
 }
+
+
+video {
+  max-width: 100%;
+}
